@@ -811,12 +811,12 @@ leave multi-line mode without sending the message
 </table>
 </dd>
 <dt><b>
-/rename nickname
+/rename name
 </b></dt>
 <dd>
-        Rename current buddy to the given nickname.
-        This command does not work for groups, at the moment (but you can move
-        the buddies to another group with the "/move" command).
+        Rename current buddy or group to the given name.
+        Please note that a group name change is only done when the server's
+        acknowledgment is received, so a slight delay can be noticed.
 </dd>
 <dt><b>
 /request time|version [jid]
@@ -1149,7 +1149,7 @@ License (GPL).</p>
 <div id="footer">
 <p>
 Version 0.7.7-dev<br />
-Last updated 26-May-2006 23:44:03 CEST
+Last updated 28-May-2006 10:53:13 CEST
 </p>
 </div>
 </div>
